# Thru

./: .gitignore  Cargo.toml  HANDOVER.md  LICENSE  README.md  send_to_pc.py
docs/: cli-design.md  debug-log-2026-03-29.md  handover-prompt.md  thru-design.md
docs/plans/: 2026-03-25-thru-cli-implementation.md  2026-03-25-thru-design.md  2026-03-26-phase2-implementation.md  2026-03-26-phase2-ssh-enhancement.md  2026-03-26-thru-roadmap.md  2026-03-27-help-improvement-design.md  2026-03-27-phase3-http-transfer.md  2026-03-27-phase3-implementation.md  2026-03-27-phase4-http-enhancement.md  2026-03-27-phase4-implementation.md  2026-03-29-http-optimization-plan.md
docs/references/: localsend-reference.md
scripts/: thru_phone_server.py  thru_receiver.py
src/: main.rs
src/commands/: config.rs  discover.rs  history.rs  init.rs  intro.rs  list.rs  mod.rs  pull.rs  receive.rs  send.rs  serve.rs  start.rs  status.rs  stop.rs
src/core/: config.rs  discovery.rs  file_watcher.rs  history.rs  http_client.rs  http_server.rs  mod.rs  ssh_key.rs  ssh_manager.rs  tailscale.rs  transfer.rs
src/templates/: upload.html
src/utils/: mod.rs  output.rs  progress.rs
