[package]
name = "thru"
version = "0.1.0"
edition = "2021"
description = "手机 - 电脑文件互传工具"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify = "6.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "2.0"
ctrlc = "3.4"
indicatif = "0.17"
inquire = "0.7"
shellexpand = "3.1"
